--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -638,7 +638,7 @@ input[type=radio] {
   color: #333;
   padding: 1.5rem 3.5rem;
   background-color: #ffc477;
-  margin-top: 2rem;
+  margin-bottom: 2rem;
   text-transform: uppercase;
   font-size: 1.8rem;
   font-weight: bold;
