--- a/4ngel0-7040/styles/base.scss
+++ b/4ngel0-7040/styles/base.scss
@@ -1,5 +1,7 @@
 @import "variables.scss";
 
+/* Estilos Globales*/
+
 html {
     font-size: 62.5%;
     -webkit-box-sizing: border-box;
@@ -16,48 +18,34 @@ html {
 }
 
 body {
-    background: linear-gradient(0deg, #ebe0c9 0%, #e6d8bb 73%, #fcdfa4 100%);
+    background: $Mischka;
 }
 
 h1,
-h2,
-h3 {
-    font-family: $fuente-titulo;
+h2 {
+    font-family: $fuente_titulo;
     margin-bottom: 1rem;
 }
 
 h1 {
-    font-size: 3.8rem;
+    font-size: 5rem;
+    text-align: center;
 }
 
 h2 {
     font-size: 3rem;
 }
 
-h3 {
-    font-size: 2.5rem;
-}
-
 a {
+    font-family: $fuente_enlaces;
     font-size: 1.8rem;
     text-decoration: none;
 }
 
-p,
-li,
-table {
-    font-family: $fuente-texto;
-    font-size: 1.8rem;
-}
-
-form {
-    font-size: 1.8rem;
-}
-
-ul {
-    display: inline-block;
-    list-style: none;
-    padding: 0;
+p {
+    font-family: $fuente_texto;
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 
 .contenedor {
@@ -69,258 +57,120 @@ img {
     max-width: 100%;
 }
 
-.fa-linkedin,
-.fa-envelope,
-.fa-github {
-    @include enlaces($Meteor);
+/*Header*/
+
+.header-nav {
+    @include flex(column);
+    justify-content: space-around;
+    padding: 2rem 5rem;
+    background-color: $Curious_Blue;
 }
 
-/* Utilidades*/
+.header-nav-opciones {
+    @include flex(column);
+    gap: 1.5rem;
+    align-items: center;
 
-.centrar {
-    text-align: center;
+    a {
+        color: $White;
+
+        &:hover {
+            border-bottom: 1px solid $White;
+        }
+    }
 }
 
-.bold {
+.header-nav-redes {
+    @include flex(row);
+    gap: 1.5rem;
+    margin-top: 2rem;
+}
+
+.fa-brands {
+    color: $White;
+}
+
+.fa-instagram {
+    &:hover {
+        color: $Tickle_Me_Pink;
+    }
+}
+
+.fa-youtube {
+    &:hover {
+        color: $Red;
+    }
+}
+
+.fa-twitter {
+    &:hover {
+        color: $Science_Blue;
+    }
+}
+
+/*Articulo Destacado*/
+
+.article-main {
+    background-image: url(../img/vr.jpg);
+    background-size: cover;
+    background-position: center right;
+    background-repeat: no-repeat;
+    width: 35rem;
+    height: 60rem;
+}
+
+.article-main-content {
+    margin-top: 5rem;
+    padding: 20rem 4rem 0;
+}
+
+.article-main-header a {
+    font-size: 3rem;
     font-weight: bold;
+    color: $White;
+
+    &:hover {
+        color: $Di_Serria;
+    }
+}
+
+.article-main-text p {
+    font-size: 2rem;
+    color: $White;
 }
 
 .separador {
-    background: linear-gradient(84deg, #ffcfa71f 0%, #ff9b49 32%, rgba(255, 155, 73, 1) 69%, #ffcfa71f 100%);
-    height: .7rem;
-    margin: 0;
-    border: none;
-}
-
-.ocultar {
-    visibility: hidden;
-    opacity: 0;
-    height: 0;
-}
-
-//Header 
-
-.header-contenedor {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-
-    .header-logo {
-        font-family: $logo;
-        animation: animacion 2s steps(30), transparent .5s step-end infinite alternate;
-        color: #7b3804;
-        font-size: 2.5rem;
-        width: 12em;
-        white-space: nowrap;
-        overflow: hidden;
-        border-right: 5px solid;
-    }
-
-    @keyframes animacion {
-        from {
-            width: 0px;
-        }
-    }
-
-    @keyframes transparent {
-        50% {
-            border-color: transparent;
-        }
-    }
-}
-
-.header-barra-img {
-    width: 5rem;
-}
-
-.header-navegacion {
-    @include flex(column);
     margin-bottom: 2rem;
-    gap: 1.5rem;
-
-    a {
-        @include enlaces($Peru_Tan);
-    }
+    background-color: $Black;
 }
 
-
-
-//Presentacion
-
-.presentacion {
-    background-color: $Grandis;
-    padding: 2rem;
-
-    .presentacion-header {
-        font-size: 1.6rem;
-        color: $Mine_Shaft;
-        line-height: 1.5;
-    }
-
-    .presentacion-span {
-        display: block;
-        text-shadow: 0.1em 0.1em #2e2e2e28;
-        font-size: 4rem;
-    }
-}
-
-
-
-//Skills
-
-.skill-lista {
-    @include flex(row);
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    gap: 5rem;
-}
-
-.skill-language {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem;
-    border: 1px solid $Black;
-}
-
-.skill-size {
-    font-size: 15rem;
-}
-
-//Proyectos
-
-#proyects {
-    margin-bottom: 2rem;
-}
-
-.proyect {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap: 2rem;
-}
-
-.proyect-article {
+.article-featured {
     @include flex(column);
-    padding: 2rem;
-    background-color: $Driftwood;
+}
+
+.article-featured-daily {
+    @include flex(column);
+    margin: 1rem 0;
+    padding: 1.5rem;
+    background-color: $Pigeon_Post;
     border-radius: .5rem;
 }
 
-.proyect-img {
-    margin: 3rem 0;
-}
+.article-featured-header a {
+    font-size: 1.8rem;
+    color: $Black;
+    line-height: 1;
 
-.boton-proyecto {
-    @include botones($White, $Mandalay);
-}
-
-//Comandos Linux
-
-.tabla {
-    border: $Black 1px solid;
-    margin: 3rem auto;
-}
-
-th {
-    font-size: 2rem;
-}
-
-th,
-td {
-    border: $Black 1px solid;
-    border-style: double;
-    padding: 0 2rem;
-}
-
-//Sobre mi
-
-.about-tittle {
-    margin-bottom: 3rem;
-}
-
-.about-content {
-    @include flex(column);
-    gap: 2rem;
-    padding: 0 3rem;
-    margin-bottom: 2rem;
-}
-
-.about-content-img {
-    width: 100%;
-
-    img {
-        border-radius: .5rem;
+    &:hover {
+        color: $Di_Serria
     }
 }
 
-.about-content-text {
-    background-color: $Old_Gold;
-    border-radius: 1rem;
-    padding: 2rem;
-}
-
-//Contacto
-
-.form-group {
-    line-height: 1.8;
-}
-
-label {
-    font-weight: bold;
-    text-transform: uppercase;
-}
-
-fieldset p {
-    margin: 2rem 0 0 0;
-}
-
-input,
-textarea,
-select {
-    display: block;
-    width: 100%;
-    padding: 1rem;
-    border: 1px solid $Scorpion;
-    border-radius: 1rem;
-    margin-bottom: 1rem;
-}
-
-textarea {
-    height: 20rem;
-}
-
-input[type="radio"] {
-    margin: 0;
-    width: auto;
-}
-
-.boton-contacto {
-    @include botones($Mine_Shaft, $Macaroni_and_Cheese);
-    margin-bottom: 2rem;
-    border: 1px solid $Cape_Palliser;
-}
-
-//Footer
+/*Footer*/
 
 .footer {
-    background: linear-gradient(0deg, rgba(252, 223, 164, 1) 2%, rgba(235, 222, 199, 1) 32%, rgba(235, 222, 199, 1) 100%);
-    padding: 2rem;
-}
-
-.footer-nav {
-    @include flex(row);
-    justify-content: center;
-    gap: 2rem;
-
-    a {
-        padding: 0 1rem;
-        margin-bottom: 1.5rem;
-    }
-
-}
-
-.footer-text {
-    font-size: 1.5rem;
-    color: $Dove_Gray;
+    background-color: $Curious_Blue;
+    text-align: center;
+    padding: 2rem 0;
+    margin-top: 1.5rem;
 }
