--- a/4ngel0-7040/styles/main.scss
+++ b/4ngel0-7040/styles/main.scss
@@ -1,3 +1,4 @@
-@use "normalize";
-@use "base";
-@use "desktop";
+@use "normalize.scss";
+@use "variables.scss";
+@use "base.scss"; 
+@use "desktop.scss";
