--- a/4ngel0-7040/assets/css/main.css
+++ b/4ngel0-7040/assets/css/main.css
@@ -699,9 +699,14 @@ input[type=radio] {
     font-size: 6rem;
   }
 }
+@media (min-width: 768px) {
+  .proyect-article:last-child {
+    grid-area: 3/1/4/3;
+  }
+}
 @media (min-width: 992px) {
   .proyect-article:last-child {
-    grid-area: 3/1/4/5;
+    grid-area: 2/2/3/3;
   }
 }
 @media (min-width: 992px) {
